add more comments
add more comments

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 
-		<div id="container">
+		<div id="container"> <!-- Start Container -->
 			<div id="containHead">
 				<div id="timer">
 					
@@ -53,12 +53,12 @@
 						<button class="submit" onclick="return handleClick();" type="submit">Submit</button>
 						<br>
 
-				</form>
+				</form> <!-- End of Form -->
 			</div>
 			<div id="bottom">
 				
 			</div>
-		</div>
+		</div> <!-- End of Container -->
 
 	</body>
 
